[package]
name = "nor"
version = "0.1.1"
authors = ["LmfZoozle <LmfZoozle@gmail.com>"]
edition = "2018"
description = "SDL wrapper"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sdl2 = "0.34.3"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image"]